name: free-server
version: 0.1.0
synopsis: An HTTP server written free monad style
license: MIT
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
category: Web
build-type: Simple
cabal-version: >=1.10

executable server
    main-is:
        Main.hs
    hs-source-dirs:
        src
    other-modules:
        Handler
        Control.Monad.Effect
        Control.Monad.Effect.Interpreter
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
    default-extensions:
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
        RecordWildCards
    build-depends:
        base >=4.11 && <4.12,
        aeson,
        async,
        bytestring,
        containers,
        data-default,
        http-types,
        req,
        text,
        wai,
        warp
